# cogitarelink

./: 00_core.ipynb  00_debug.ipynb  00_memory.ipynb  01_cache.ipynb  01_retriever.ipynb  01_vocabulary.ipynb  01_vocabularytools.ipynb  02_dataset.ipynb  02_navigation.ipynb  02_registry.ipynb  02_retriever.ipynb  02_vocabulary.ipynb  03_collision.ipynb  03_dataset.ipynb  03_memory.ipynb  03_memory_dep.ipynb  03_navigation.ipynb  03_vocabularytools.ipynb  04_composer.ipynb  04_tools.ipynb  04_vmemory.ipynb  05_context.ipynb  05_memorytools.ipynb  05_tools.ipynb  05_workflows.ipynb  06_agents.ipynb  06_entity.ipynb  06_workflows.ipynb  07_agents.ipynb  07_graph.ipynb  08_processor.ipynb  08_utils.ipynb  09_cli.ipynb  09a_vocab_tools.ipynb  10_agent_cli.ipynb  11_agent_foundations.ipynb  60_afford.ipynb  61_sandbox.ipynb  61_sandbox.py  62_obqc.ipynb  (+109 more)
.github/: copilot-instructions.md
backup/: d_04_vmemory.ipynb  scratch.ipynb
cogitarelink/: _modidx.py  agents.py  agen†s.py  core.py  dataset.py  memory.py  memorydep.py  memorytools.py  navigation.py  retriever.py  tools.py  utils.py  vmemory.py  vocabtools.py  vocabulary.py  workflows.py
data/: registry_data.json
deprecated/: 01_vocabularytools.ipynb  03_memory.ipynb  04_vmemory.ipynb
dialogs/: JSON-LDA.ipynb  JSONLD-AgenticSystem.ipynb  cl_ar_retriever.ipynb  cl_ar_retriever_vc_bug.ipynb  cl_memorytools_test.ipynb  cl_vocab_KI.ipynb  cogitarelink-wd.ipynb
docs/: agent_cli_implementation_plan.md  agent_enabled_cli.md  agent_tool_fix.md  architecture.md  earth616_agent_guide.md  framework_integration.md  (+2 more)
(+136 files in other folders)
